Reforked rabbit with rabbit-enhanced fork, forked configuration api from bukkit api