@@ -2,8 +2,8 @@ package net.deechael.khl.restful;
 
 import net.deechael.khl.client.http.HttpMethod;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 
 @SuppressWarnings("unused")
@@ -459,8 +459,14 @@ public class RestRoute {
             }
             StringBuilder queryString = new StringBuilder();
             queryParams.forEach((k, v) -> {
-                String keyEnc = URLEncoder.encode(k, StandardCharsets.UTF_8);
-                String valEnc = URLEncoder.encode(String.valueOf(v), StandardCharsets.UTF_8);
+                String keyEnc = null;
+                String valEnc = null;
+                try {
+                    keyEnc = URLEncoder.encode(k, "UTF-8");
+                    valEnc = URLEncoder.encode(String.valueOf(v), "UTF-8");
+                } catch (UnsupportedEncodingException e) {
+                    e.printStackTrace();
+                }
                 queryString.append('&').append(keyEnc).append('=').append(valEnc);
             });
             queryString.deleteCharAt(0);
